logs/libturpial.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/libturpial'...
Listing './lib/python3.5/site-packages/libturpial/api'...
Compiling './lib/python3.5/site-packages/libturpial/api/core.py'...
***   File "./lib/python3.5/site-packages/libturpial/api/core.py", line 318
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libturpial/api/managers'...
Listing './lib/python3.5/site-packages/libturpial/api/models'...
Listing './lib/python3.5/site-packages/libturpial/certs'...
Listing './lib/python3.5/site-packages/libturpial/common'...
Compiling './lib/python3.5/site-packages/libturpial/config.py'...
***   File "./lib/python3.5/site-packages/libturpial/config.py", line 308
    except Except, exc:
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libturpial/lib'...
Listing './lib/python3.5/site-packages/libturpial/lib/interfaces'...
Listing './lib/python3.5/site-packages/libturpial/lib/protocols'...
Listing './lib/python3.5/site-packages/libturpial/lib/protocols/identica'...
Compiling './lib/python3.5/site-packages/libturpial/lib/protocols/identica/identica.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/protocols/identica/identica.py", line 44
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libturpial/lib/protocols/twitter'...
Compiling './lib/python3.5/site-packages/libturpial/lib/protocols/twitter/twitter.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/protocols/twitter/twitter.py", line 46
    print response
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libturpial/lib/services'...
Listing './lib/python3.5/site-packages/libturpial/lib/services/media'...
Listing './lib/python3.5/site-packages/libturpial/lib/services/media/preview'...
Listing './lib/python3.5/site-packages/libturpial/lib/services/media/upload'...
Listing './lib/python3.5/site-packages/libturpial/lib/services/url'...
Listing './lib/python3.5/site-packages/libturpial/lib/services/url/shortypython'...
Compiling './lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/common.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/common.py", line 34
    except URLError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/compile.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/compile.py", line 66
    print '%s not found! Skipping' % service
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/shorty.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/shorty.py", line 82
    except URLError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/test.py'...
***   File "./lib/python3.5/site-packages/libturpial/lib/services/url/shortypython/test.py", line 9
    print 'Running shorty tests...'
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libturpial-1.0.egg-info'...
Listing './lib/python3.5/site-packages/oauth'...
Listing './lib/python3.5/site-packages/oauth-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
